# afex

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  Todo.md  conanfile.py  package.py  setup.py
Source/: CMakeLists.txt  Projects.py  conanfile.py
Source/Donsol/Configs/: afex.toml  donsol.toml
Source/Donsol/Private/: donsol_main.cpp  main.cpp
Source/Donsol/Private/Gameplay/: Difficulty.cpp  Difficulty.h
Source/Donsol/Private/Logging/: AppLogging.cpp  AppLogging.h
Source/Donsol/Private/UI/: MainMenu.cpp  MainMenu.h  Performance.cpp  Performance.h
Source/Engine/: CMakeLists.txt  conanfile.py
Source/Engine/Application/Private/: Application.cpp  ApplicationImpl.cpp  ApplicationImpl.h
Source/Engine/Core/: CMakeLists.txt  Core.natvis  conanfile.py
Source/Engine/Core/Private/: Assert.cpp  Config.cpp  ConfigImpl.cpp  ConfigImpl.h  Filesystem.cpp  Logging.cpp  Paths.cpp  ResolvePathResult.cpp  Text.cpp  Window.cpp  afex.cpp  main.cpp
Source/Engine/Graphics/Private/: Event.h  ImguiRendererImpl.cpp  ImguiRendererImpl.h  Logo.cpp  Logo.h  RenderEngine.cpp  RenderEngineArgs.cpp  RenderEngineImpl.cpp  RenderEngineImpl.h  bgfxCallbacks.cpp  bgfxCallbacks.h  imguiRenderer.cpp  imguiRenderer.h
Source/Engine/Platform/: CMakeLists.txt  conanfile.py
Source/Engine/Platform/Private/: Window.cpp  (+4 more)
Source/Game/: CMakeLists.txt
Source/Game/Private/: main.cpp
Source/HelloWorld/: CMakeLists.txt  conanfile.py
Source/HelloWorld/Configs/: afex.toml
Source/HelloWorld/Private/: main.cpp
Source/TowerDefense/: CMakeLists.txt
Source/TowerDefense/Private/: main.cpp
(+66 files in other folders)
